# person_detect

./: .gitignore  README.md  pyproject.toml  run_native_vlm_eval.sh  run_person_detect.sh  run_single_frame_eval.sh
docs/: native_vlm_strategy.md  single_frame_strategy.md
src/person_detect/: __init__.py  audit.py  behavior.py  boxes.py  cli.py  detector.py  display.py  identity.py  session.py  tracking.py
src/person_detect/native_vlm/: __init__.py  __main__.py  eval.py  pipeline.py  prompts.py
src/person_detect/single_frame/: __init__.py  __main__.py  eval.py  pipeline.py  prompts.py
test_dataset/: test.jsonl  test_filtered.jsonl
tests/: test_audit.py  test_behavior.py  test_boxes.py  test_cli_cadence.py  test_cli_pipeline.py  test_display.py  test_identity_cache.py  test_native_vlm_eval.py  test_native_vlm_pipeline.py  test_session.py  test_single_frame_eval.py  test_single_frame_pipeline.py  test_tracking.py
