[project]
name = "person-detect"
version = "0.1.0"
description = "CPU-based macOS webcam person detection, identity anchoring, and tracking."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "insightface>=0.7.3",
    "numpy>=1.26,<3",
    "onnxruntime>=1.18",
    "openai>=1.0",
    "opencv-python>=4.9",
    "requests>=2.32",
    "ultralytics>=8.2",
]

[project.scripts]
person-detect = "person_detect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
